route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: flask-obc
  namespace: flask-obc
spec:
  host: flask-obc-flask-obc.apps.cluster.domain.com
  to:
    kind: Service
    name: flask-obc-oauth-svc
    weight: 100
  port:
    targetPort: oauth-proxy
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
